# ecallisto_ng

./: .gitignore  LICENSE  MANIFEST.in  README.md  _api_test.ipynb  _development.ipynb  build_upload.sh  dev_requirements.txt  pyproject.toml
example/: combination_of_signals_quantile_crosscorrelation.ipynb  create_burst_images.ipynb  detection.ipynb  ecallisto_virtual_antenna.ipynb  fixed_resolution_plotting.ipynb  plotting_from_rest_api.ipynb  plotting_soleil.ipynb  test_spectrogram_axis_fix.ipynb
src/ecallisto_ng/burst_list/: utils.py
src/ecallisto_ng/burst_list/data/: burst_list.xlsx
src/ecallisto_ng/combine_antennas/: combine.py  utils.py  virtualantenna.py
src/ecallisto_ng/data_download/: downloader.py  hu_dataset.py  utils.py
src/ecallisto_ng/data_fetching/: get_data.py  get_information.py
src/ecallisto_ng/data_processing/: utils.py
src/ecallisto_ng/detection/: flare_detection.py
src/ecallisto_ng/plotting/: api.py  plotting.py  plotting_utils.py  utils.py
src/models/: CustomCNN.py  DefaultModel.py  EfficientNetV2SBinaryClassifier.py  ResNet18BinaryClassifier.py  ResNet50BinaryClassifier.py  SqueezeNetBinaryClassifier.py  ViTB16BinaryClassifier.py
tests/: conftest.py  hu_dataset.py  test_bg_subs.py  test_burstlist.py  test_data_download.py  test_plotting.py  test_utils.py
