[project]
name = "ecallisto-ng"
version = "1.1.2"
authors = [{name = "Vincenzo Timmel", email = "vincenzo.timmel@fhnw.ch"}]
description = "A Python package for the fetching (and some processing and plotting) of eCallisto data based on request and pandas."
readme = "README.md"

requires-python = ">=3.9,<3.12"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy<2.0.0',
    'pandas>=2.0.0',
    'openpyxl',
    'plotly',
    'kaleido',
    'matplotlib',
    'requests',
    'scikit-image>=0.20.0',
    'pyarrow',
    'bs4',
    'lxml',
    'astropy',
    'tqdm'
]
[project.optional-dependencies]
nb = ['nbformat', 'ipython', 'ipykernel']
dev = ['black', 'isort', 'twine', 'build', 'pytest']
va = ['torch']
all = ['nbformat', 'ipython', 'ipykernel', 'black', 'isort', 'twine', 'build', 'pytest', 'torch']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/i4Ds/ecallisto_ng"
"Bug Tracker" = "https://github.com/i4Ds/ecallisto_ng/issues"
